--- a/Game.csproj
+++ b/Game.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\TiledInitialShaderProperties.cs" />
     <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\TiledMap.cs" />
     <Compile Include="Assets\Tiled2Unity\Scripts\Runtime\TmxObject.cs" />
+    <Compile Include="Assets\joystick_size.cs" />
     <Compile Include="Assets\movement.cs" />
     <Compile Include="Assets\player_follow.cs" />
   </ItemGroup>
